--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -470,7 +470,7 @@
     },
     "view": "Ver",
     "view-more": "Ver mais",
-    "view-on-etherscan": "Ver no Etherscan",
+    "view-on-etherscan": "Ver no VelasExplorer",
     "waiting-approval": "Aguardando aprovação",
     "waiting-confirmation": "Aguardando confirmação da transação",
     "waiting-proxy-deployment": "Aguardando Deploy do Proxy",
