update icons and rename oasis

--- a/features/content/privacy/pt.mdx
+++ b/features/content/privacy/pt.mdx
@@ -35,7 +35,7 @@ Observe que não somos responsáveis por seu uso da rede blockchain Velas e de s
 
 ### Suas consultas
 
-Você pode nos contatar por e-mail através do seguinte endereço: legal@oasis.app. Utilizamos os dados que você fornece através de um e-mail, que possa nos enviar voluntariamente, somente para responder à sua pergunta ou para responder ao seu e-mail da melhor maneira possível.
+Você pode nos contatar por e-mail através do seguinte endereço: velerodao@gmail.com. Utilizamos os dados que você fornece através de um e-mail, que possa nos enviar voluntariamente, somente para responder à sua pergunta ou para responder ao seu e-mail da melhor maneira possível.
 
 ## Seus direitos
 
@@ -98,4 +98,4 @@ No caso de conflito ou inconsistência entre a Política de Privacidade e qualqu
 
 ### Contato
 
-Queira nos contatar se tiver alguma pergunta, comentário ou preocupação relativos à nossa Política de Privacidade, assim como qualquer outra solicitação, escrevendo para legal@oasis.app.
+Queira nos contatar se tiver alguma pergunta, comentário ou preocupação relativos à nossa Política de Privacidade, assim como qualquer outra solicitação, escrevendo para velerodao@gmail.com.
