--- a/features/content/privacy/en.mdx
+++ b/features/content/privacy/en.mdx
@@ -2,9 +2,9 @@
 
 *Last updated: 1 June 2021*
 
-This Privacy Policy provides our privacy policy regarding the nature, purpose, use, and sharing of personal data or other information collected from the users of the website oasis.app and other websites which use subdomains of oasis.app (the "Site"). This Privacy Policy also includes the Cookie We are committed to protecting and respecting your privacy. Please read this carefully as this Privacy Policy is legally binding when you use the Site.
+This Privacy Policy provides our privacy policy regarding the nature, purpose, use, and sharing of personal data or other information collected from the users of the website vaults.velero.finance and other websites which use subdomains of vaults.velero.finance (the "Site"). This Privacy Policy also includes the Cookie We are committed to protecting and respecting your privacy. Please read this carefully as this Privacy Policy is legally binding when you use the Site.
 
-As used in this Privacy Policy, "we", "us" or "our" refers to Oazo Apps Limited, a company incorporated and registered in England, United Kingdom. You can reach us with any requests relating to this Privacy Policy via contact details provided below.
+As used in this Privacy Policy, "we", "us" or "our" refers to Velero Apps, a company incorporated and registered in England, United Kingdom. You can reach us with any requests relating to this Privacy Policy via contact details provided below.
 
 ## Data processing in connection with the Site
 
@@ -36,7 +36,7 @@ Note that we are not responsible for your use of the Velas blockchain and your d
 
 ### Your inquiries
 
-You may contact us by email to the following email address: legal@oasis.app. We use the data that you provide in an email to us, which you may give voluntarily, only in order to answer your contact question or to reply to your email in the best possible manner.
+You may contact us by email to the following email address: velerodao@gmail.com. We use the data that you provide in an email to us, which you may give voluntarily, only in order to answer your contact question or to reply to your email in the best possible manner.
 
 ## Your rights
 
@@ -99,4 +99,4 @@ In the event of any conflict or inconsistency between this Privacy Policy and an
 
 ### Contact
 
-Please contact us with questions, comments, or concerns regarding our Privacy Policy as well as with any requests at legal@oasis.app.
+Please contact us with questions, comments, or concerns regarding our Privacy Policy as well as with any requests at velerodao@gmail.com.
