--- a/features/content/privacy/es.mdx
+++ b/features/content/privacy/es.mdx
@@ -36,7 +36,7 @@ Tenga en cuenta que no somos responsables del uso que usted haga de la cadena de
 
 ### Sus consultas
 
-Puede ponerse en contacto con nosotros por correo electrónico a través de la siguiente dirección: legal@oasis.app. Utilizamos los datos que usted nos proporciona a través de un correo electrónico, que puede compartir voluntariamente, solo para responder a su pregunta de contacto o para responder a su correo electrónico de la mejor manera posible.
+Puede ponerse en contacto con nosotros por correo electrónico a través de la siguiente dirección: velerodao@gmail.com. Utilizamos los datos que usted nos proporciona a través de un correo electrónico, que puede compartir voluntariamente, solo para responder a su pregunta de contacto o para responder a su correo electrónico de la mejor manera posible.
 
 ## Sus derechos
 
@@ -97,4 +97,4 @@ En caso de cualquier conflicto o incoherencia entre esta Política de privacidad
 
 ### Contacto
 
-Sírvase ponerse en contacto con nosotros con preguntas, comentarios o inquietudes sobre nuestra Política de Privacidad, así como con cualquier otra solicitud en legal@oasis.app.
+Sírvase ponerse en contacto con nosotros con preguntas, comentarios o inquietudes sobre nuestra Política de Privacidad, así como con cualquier otra solicitud en velerodao@gmail.com.
