--- a/features/content/tos/en.mdx
+++ b/features/content/tos/en.mdx
@@ -1,10 +1,10 @@
 # Terms of Service
 
-*Last Revised: 1 June 2021*
+*Last Revised: 1 October 2021*
 
 Please read these Terms of Service (this “Agreement”) carefully. Your use or access of the Site or the Services (as defined below) constitutes your consent to this Agreement.
 
-This Agreement is between you (the “User” and collectively with others using the Site, “Users”) and Oazo Apps Limited, a company incorporated and registered in England, United Kingdom (“Company” or “we,” “our” or “us” and together with you, the “Parties”) concerning your use of (including any access to) Company’s websites, currently located at oasis.app, mobile applications, web applications, decentralized applications, smart contracts and API located at any of Company’s websites (together with any materials and services available therein, and successor website(s) or application(s) thereto, the “Site”). This Agreement hereby incorporates by this reference any additional terms and conditions with respect to the Site posted by Company to the Site, or otherwise made available to you by Company.
+This Agreement is between you (the “User” and collectively with others using the Site, “Users”) and Velero Apps, a company incorporated and registered in England, United Kingdom (“Company” or “we,” “our” or “us” and together with you, the “Parties”) concerning your use of (including any access to) Company’s websites, currently located at oasis.app, mobile applications, web applications, decentralized applications, smart contracts and API located at any of Company’s websites (together with any materials and services available therein, and successor website(s) or application(s) thereto, the “Site”). This Agreement hereby incorporates by this reference any additional terms and conditions with respect to the Site posted by Company to the Site, or otherwise made available to you by Company.
 
 By clicking or tapping any button or box marked “accept” or “agree” (or a similar term) in connection with this Agreement, or by accessing or using the Site or the Services (as defined below), you agree to be bound by this Agreement, a current version of which is available at the Site, and which may be modified from time to time at our sole discretion in accordance with section 3 below.
 
@@ -130,7 +130,7 @@ Some jurisdictions do not allow the exclusion of certain warranties or the limit
 
 Some software used in our Services may be offered under an open source license that we will make available to you. Documentation of open source code is available on the [Velero Github](https://github.com/velerofinance) page. This documentation, including any code shown in it, is licensed under the [GNU Affero General Public License version 3](https://www.gnu.org/licenses/agpl-3.0.en.html) and you agree to abide by the terms of this license.
 
-The “Oasis.app” name, the Oasis logo, other related trademarks (“Oasis Borrow”, “Oasis Trade”), and the web domains and URLs are property of Oazo Apps Limited. Using our Services does not give you ownership of any proprietary intellectual property rights in our Services or the content you access. You may not use proprietary content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. You may not remove, obscure, or alter any legal notices displayed in or along with our Services.
+The “Oasis.app” name, the Oasis logo, other related trademarks (“Oasis Borrow”, “Oasis Trade”), and the web domains and URLs are property of Velero Apps. Using our Services does not give you ownership of any proprietary intellectual property rights in our Services or the content you access. You may not use proprietary content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. You may not remove, obscure, or alter any legal notices displayed in or along with our Services.
 
 ## 8. Links
 
@@ -160,7 +160,7 @@ You and the Company agree that any dispute is personal to you and the Company an
 
 ### 11.4 Process
 
-You and the Company agree that you will notify each other in writing of any Dispute within thirty (30) days of when it arises so that the parties can attempt, in good faith, to resolve the Dispute informally. Notice to the Company shall be provided by sending an email to legal@oasis.app. Your notice must include: (1) your name, postal address, and email address; (2) a description of the nature or basis of the Dispute; and (3) the specific relief that you are seeking. If you and the Company cannot agree how to resolve the Dispute within thirty (30) days of the Company receiving the notice, either you or Company may, as appropriate pursuant to this Section 11, commence an arbitration proceeding or file a claim in court. You and the Company agree that any arbitration or claim must be commenced or filed within one (1) year after the Dispute arose; otherwise, you and the Company agree that the claim is permanently barred (which means that you will no longer have the right to assert a claim regarding the Dispute). You and the Company agree that: (a) any arbitration will occur in New York County, New York; (b) arbitration will be conducted confidentially by a single arbitrator in accordance with the rules of JAMS; and (c) the state or federal courts in New York will have exclusive jurisdiction over the enforcement of an arbitration award and over any Dispute between the parties that is not subject to arbitration. You may also litigate a Dispute in small claims court located in the county where you reside if the Dispute meets the requirements to be heard in small claims court.
+You and the Company agree that you will notify each other in writing of any Dispute within thirty (30) days of when it arises so that the parties can attempt, in good faith, to resolve the Dispute informally. Notice to the Company shall be provided by sending an email to velerodao@gmail.com. Your notice must include: (1) your name, postal address, and email address; (2) a description of the nature or basis of the Dispute; and (3) the specific relief that you are seeking. If you and the Company cannot agree how to resolve the Dispute within thirty (30) days of the Company receiving the notice, either you or Company may, as appropriate pursuant to this Section 11, commence an arbitration proceeding or file a claim in court. You and the Company agree that any arbitration or claim must be commenced or filed within one (1) year after the Dispute arose; otherwise, you and the Company agree that the claim is permanently barred (which means that you will no longer have the right to assert a claim regarding the Dispute). You and the Company agree that: (a) any arbitration will occur in New York County, New York; (b) arbitration will be conducted confidentially by a single arbitrator in accordance with the rules of JAMS; and (c) the state or federal courts in New York will have exclusive jurisdiction over the enforcement of an arbitration award and over any Dispute between the parties that is not subject to arbitration. You may also litigate a Dispute in small claims court located in the county where you reside if the Dispute meets the requirements to be heard in small claims court.
 
 ### 11.5. Authority of Arbitrator
 
@@ -176,7 +176,7 @@ For any dispute not subject to arbitration you and Company agree to submit to th
 
 ## 12. Prohibited Use
 
-You may not use the Service to engage in the following categories of activity (" Prohibited Uses "). The specific types of use listed below are representative, but not exhaustive. If you are uncertain as to whether or not your use of the Services involves a Prohibited Use, or have questions about how these requirements apply to you, please contact us at legal@oasis.app. By using the Site or Services, you confirm that you will not use the Site or Services to do any of the following:
+You may not use the Service to engage in the following categories of activity (" Prohibited Uses "). The specific types of use listed below are representative, but not exhaustive. If you are uncertain as to whether or not your use of the Services involves a Prohibited Use, or have questions about how these requirements apply to you, please contact us at velerodao@gmail.com. By using the Site or Services, you confirm that you will not use the Site or Services to do any of the following:
 
 - Unlawful Activity: Activity which would violate, or assist in violation of, any law, statute, ordinance, or regulation, sanctions programs administered in any relevant country, including but not limited to the U.S. Department of Treasury's Office of Foreign Assets Control (" OFAC "), or which would involve proceeds of any unlawful activity; publish, distribute or disseminate any unlawful material or information;
 - Abuse Other Users: Interfere with another individual's or entity's access to or use of any Services; defame, abuse, extort, harass, stalk, threaten or otherwise violate or infringe the legal rights (such as, but not limited to, rights of privacy, publicity and intellectual property) of others; incite, threaten, facilitate, promote, or encourage hate, racial intolerance, or violent acts against others; harvest or otherwise collect information from the Site about others, including without limitation email addresses, without proper consent;
@@ -225,4 +225,4 @@ In the event of any conflict or inconsistency between this Terms of Service and 
 
 Company may utilize collected data and information about you, addressed above and in the Privacy Policy, to communicate with you regarding the Services. By agreeing to these Terms of Service or availing yourself of the Services, you acknowledge and authorize the Company’s communications with you. You may opt out of subsequent communications by following the procedures provided for in any such communication.
 
-Users with questions, complaints or claims with respect to the Services may contact us using the relevant contact information set forth above and at legal@oasis.app.
+Users with questions, complaints or claims with respect to the Services may contact us using the relevant contact information set forth above and at velerodao@gmail.com.
