update oasis to vaults.velero.finance

--- a/features/content/privacy/es.mdx
+++ b/features/content/privacy/es.mdx
@@ -2,7 +2,7 @@
 
 *Última actualización: 2 de noviembre de 2020*
 
-La presente Política de Privacidad estipula nuestro régimen en cuanto a la privacidad con respecto a la naturaleza, propósito, uso y divulgación de datos personales u otra información recopilada por parte de los usuarios del sitio web oasis.app y otros sitios web que utilizan subdominios de oasis.app (el "Sitio"). La presente Política de Privacidad también incluye la Cookie con la que nos comprometemos a proteger y respetar su privacidad. Sírvase leerla detenidamente, ya que la presente Política de Privacidad es legalmente vinculante cuando usted utiliza el Sitio.
+La presente Política de Privacidad estipula nuestro régimen en cuanto a la privacidad con respecto a la naturaleza, propósito, uso y divulgación de datos personales u otra información recopilada por parte de los usuarios del sitio web vaults.velero.finance y otros sitios web que utilizan subdominios de vaults.velero.finance (el "Sitio"). La presente Política de Privacidad también incluye la Cookie con la que nos comprometemos a proteger y respetar su privacidad. Sírvase leerla detenidamente, ya que la presente Política de Privacidad es legalmente vinculante cuando usted utiliza el Sitio.
 
 Tal como se utiliza en la presente Política de Privacidad, "nosotros" o "nuestro" se refiere a Velero Ecosystem Growth Holdings, Inc. Puede ponerse en contacto con nosotros para cualquier solicitud relacionada con la presente Política de Privacidad a través de los datos de contacto que se indican a continuación.
 
