--- a/features/content/privacy/pt.mdx
+++ b/features/content/privacy/pt.mdx
@@ -2,7 +2,7 @@
 
 *Atualização mais recente: 2 de novembro de 2020*
 
-A presente Política de Privacidade fornece nossa política de privacidade relativa à natureza, propósito, uso e compartilhamento de dados pessoais ou outras informações coletadas dos usuários do site oasis.app e outros sites que usem subdomínios do oasis.app (o “Site"). A presente Política de Privacidade inclui também os Cookies com os quais nos comprometemos a proteger e respeitar sua privacidade. Queira ler cuidadosamente esta Política de Privacidade, visto que ela é legalmente vinculante a todos aqueles que usem o Site.
+A presente Política de Privacidade fornece nossa política de privacidade relativa à natureza, propósito, uso e compartilhamento de dados pessoais ou outras informações coletadas dos usuários do site vaults.velero.finance e outros sites que usem subdomínios do vaults.velero.finance (o “Site"). A presente Política de Privacidade inclui também os Cookies com os quais nos comprometemos a proteger e respeitar sua privacidade. Queira ler cuidadosamente esta Política de Privacidade, visto que ela é legalmente vinculante a todos aqueles que usem o Site.
 
 Tal como utilizado nesta Política de Privacidade, “nós" ou “nosso" se refere à Velero Ecosystem Growth Holdings, Inc. Você pode entrar em contato conosco se tiver alguma dúvida relativa a esta Política de Privacidade através dos dados de contato fornecidos abaixo.
 
