--- a/features/content/tos/pt.mdx
+++ b/features/content/tos/pt.mdx
@@ -4,7 +4,7 @@
 
 Leia cuidadosamente estes Termos de Serviço (“Contrato”). Seu uso ou acesso ao Site ou aos Serviços (como definido abaixo) constitui seu consentimento a este Contrato.
 
-Este Contrato é realizado entre você (o “Usuário” e, coletivamente com outros usuários do Site, “Usuários”) e a Velero Ecosystem Growth Holdings, Inc, uma empresa constituída sob as leis das Ilhas Cayman (“Empresa" ou “nós" ou “nosso" e, em conjunto com você, as “Partes”) em relação ao seu uso (incluindo todos os acessos) dos sites da Empresa, atualmente localizados em oasis.app, aplicativos móveis, aplicativos da internet, aplicativos descentralizados, contratos inteligentes e API localizados em qualquer um dos sites da Empresa (junto com qualquer material e serviços neles disponíveis, e o(s) site(s) sucessor(es) ou seu(s) aplicativo(s), o “Site”). Este Contrato incorpora por esta referência todos os termos e condições adicionais relativos ao Site e publicados pela Empresa no Site, ou de outra forma disponibilizados a você pela Empresa.
+Este Contrato é realizado entre você (o “Usuário” e, coletivamente com outros usuários do Site, “Usuários”) e a Velero Ecosystem Growth Holdings, Inc, uma empresa constituída sob as leis das Ilhas Cayman (“Empresa" ou “nós" ou “nosso" e, em conjunto com você, as “Partes”) em relação ao seu uso (incluindo todos os acessos) dos sites da Empresa, atualmente localizados em vaults.velero.finance, aplicativos móveis, aplicativos da internet, aplicativos descentralizados, contratos inteligentes e API localizados em qualquer um dos sites da Empresa (junto com qualquer material e serviços neles disponíveis, e o(s) site(s) sucessor(es) ou seu(s) aplicativo(s), o “Site”). Este Contrato incorpora por esta referência todos os termos e condições adicionais relativos ao Site e publicados pela Empresa no Site, ou de outra forma disponibilizados a você pela Empresa.
 
 Ao clicar ou ativar qualquer botão ou caixa de texto que assinale “aceito” ou “concordo” (ou termo semelhante) relacionado a este Contrato, ou ao acessar ou utilizar o Site ou seus Serviços (conforme definido abaixo), você aceita as obrigações expressas neste Contrato, cuja versão atual está disponível no Site, e que podem ser modificadas periodicamente ao nosso critério exclusivo, conforme a seção 3 abaixo.
 
