--- a/features/content/tos/en.mdx
+++ b/features/content/tos/en.mdx
@@ -4,7 +4,7 @@
 
 Please read these Terms of Service (this “Agreement”) carefully. Your use or access of the Site or the Services (as defined below) constitutes your consent to this Agreement.
 
-This Agreement is between you (the “User” and collectively with others using the Site, “Users”) and Velero Apps, a company incorporated and registered in England, United Kingdom (“Company” or “we,” “our” or “us” and together with you, the “Parties”) concerning your use of (including any access to) Company’s websites, currently located at oasis.app, mobile applications, web applications, decentralized applications, smart contracts and API located at any of Company’s websites (together with any materials and services available therein, and successor website(s) or application(s) thereto, the “Site”). This Agreement hereby incorporates by this reference any additional terms and conditions with respect to the Site posted by Company to the Site, or otherwise made available to you by Company.
+This Agreement is between you (the “User” and collectively with others using the Site, “Users”) and Velero Apps, a company incorporated and registered in England, United Kingdom (“Company” or “we,” “our” or “us” and together with you, the “Parties”) concerning your use of (including any access to) Company’s websites, currently located at vaults.velero.finance, mobile applications, web applications, decentralized applications, smart contracts and API located at any of Company’s websites (together with any materials and services available therein, and successor website(s) or application(s) thereto, the “Site”). This Agreement hereby incorporates by this reference any additional terms and conditions with respect to the Site posted by Company to the Site, or otherwise made available to you by Company.
 
 By clicking or tapping any button or box marked “accept” or “agree” (or a similar term) in connection with this Agreement, or by accessing or using the Site or the Services (as defined below), you agree to be bound by this Agreement, a current version of which is available at the Site, and which may be modified from time to time at our sole discretion in accordance with section 3 below.
 
@@ -130,7 +130,7 @@ Some jurisdictions do not allow the exclusion of certain warranties or the limit
 
 Some software used in our Services may be offered under an open source license that we will make available to you. Documentation of open source code is available on the [Velero Github](https://github.com/velerofinance) page. This documentation, including any code shown in it, is licensed under the [GNU Affero General Public License version 3](https://www.gnu.org/licenses/agpl-3.0.en.html) and you agree to abide by the terms of this license.
 
-The “Oasis.app” name, the Oasis logo, other related trademarks (“Oasis Borrow”, “Oasis Trade”), and the web domains and URLs are property of Velero Apps. Using our Services does not give you ownership of any proprietary intellectual property rights in our Services or the content you access. You may not use proprietary content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. You may not remove, obscure, or alter any legal notices displayed in or along with our Services.
+The “vaults.velero.finance” name, the Oasis logo, other related trademarks (“Oasis Borrow”, “Oasis Trade”), and the web domains and URLs are property of Velero Apps. Using our Services does not give you ownership of any proprietary intellectual property rights in our Services or the content you access. You may not use proprietary content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. You may not remove, obscure, or alter any legal notices displayed in or along with our Services.
 
 ## 8. Links
 
