--- a/features/content/tos/es.mdx
+++ b/features/content/tos/es.mdx
@@ -4,7 +4,7 @@
 
 Sírvase leer los presentes Términos de Servicio (el presente “Acuerdo”) cuidadosamente. Su uso o acceso al Sitio o a los Servicios (como se define a continuación) constituye su consentimiento al presente Acuerdo.
 
-El presente Acuerdo se realiza entre usted (el "Usuario" y colectivamente con otros usuarios del Sitio, "Usuarios") y Velero Ecosystem Growth Holdings, Inc., una compañía constituida bajo las leyes de las Islas Caimán ("Compañía" o "nosotros" o "nuestro" y junto con usted, las "Partes") en relación con su uso de (incluyendo cualquier acceso a) los sitios web de la Compañía, actualmente ubicados en oasis.app, aplicaciones móviles, aplicaciones web, aplicaciones descentralizadas, contratos inteligentes y API ubicados en cualquiera de los sitios web de la Compañía (junto con cualquier material y servicio disponible en ellos, y el(los) sitio(s) web sucesor(es) o aplicación(es) del mismo, el "Sitio"). El presente Acuerdo incorpora por esta referencia cualquier término y condición adicional con respecto al Sitio publicado por la Compañía en el mismo, o puesto a su disposición por la Compañía a través de otros medios.
+El presente Acuerdo se realiza entre usted (el "Usuario" y colectivamente con otros usuarios del Sitio, "Usuarios") y Velero Ecosystem Growth Holdings, Inc., una compañía constituida bajo las leyes de las Islas Caimán ("Compañía" o "nosotros" o "nuestro" y junto con usted, las "Partes") en relación con su uso de (incluyendo cualquier acceso a) los sitios web de la Compañía, actualmente ubicados en vaults.velero.finance, aplicaciones móviles, aplicaciones web, aplicaciones descentralizadas, contratos inteligentes y API ubicados en cualquiera de los sitios web de la Compañía (junto con cualquier material y servicio disponible en ellos, y el(los) sitio(s) web sucesor(es) o aplicación(es) del mismo, el "Sitio"). El presente Acuerdo incorpora por esta referencia cualquier término y condición adicional con respecto al Sitio publicado por la Compañía en el mismo, o puesto a su disposición por la Compañía a través de otros medios.
 
 Al hacer clic o tocar cualquier botón o cuadro marcado como "aceptar" o "estoy de acuerdo" (o un término similar) en relación con el presente Acuerdo, o al acceder o utilizar el Sitio o sus Servicios (como se define a continuación), usted acepta las obligaciones expresadas por el presente Acuerdo, cuya versión actual está disponible en el Sitio, y que puede ser modificado periódicamente a nuestra única discreción de conformidad con la sección 3 a continuación.
 
