--- a/features/content/tos/en.mdx
+++ b/features/content/tos/en.mdx
@@ -12,7 +12,7 @@ By clicking or tapping any button or box marked “accept” or “agree” (or 
 
 ### 1.1. Services
 
-The Company has developed Oasis – an online, decentralized and autonomous environment that displays price information and autonomous smart contract mechanisms of digital tokens and assets (“Digital Assets”) and provides the user-interface that guides your access to Oasis (the “Services”).
+The Company has developed Velero – an online, decentralized and autonomous environment that displays price information and autonomous smart contract mechanisms of digital tokens and assets (“Digital Assets”) and provides the user-interface that guides your access to Velero (the “Services”).
 
 You affirm that you are aware and acknowledge that Company is a non-custodial provider of software services, meaning that the Company does not custody, control or manage user funds in any manner whatsoever. The Services are deployed in a decentralized environment wherein the Services can be autonomously and directly accessed by the Users without any involvement or actions taken by Company or any third-party.
 
