--- a/features/content/tos/es.mdx
+++ b/features/content/tos/es.mdx
@@ -12,7 +12,7 @@ Al hacer clic o tocar cualquier botón o cuadro marcado como "aceptar" o "estoy 
 
 ### 1.1. Servicios
 
-La Compañía ha desarrollado Oasis, un entorno en línea, descentralizado y autónomo que muestra información de precios y mecanismos de contrato inteligentes y autónomos de fichas y activos digitales ("Activos Digitales") y proporciona la interfaz de usuario que guía su acceso a Oasis (los "Servicios").
+La Compañía ha desarrollado Velero, un entorno en línea, descentralizado y autónomo que muestra información de precios y mecanismos de contrato inteligentes y autónomos de fichas y activos digitales ("Activos Digitales") y proporciona la interfaz de usuario que guía su acceso a Velero (los "Servicios").
 
 Usted afirma que sabe y reconoce que la Compañía es un proveedor no custodio de servicios informáticos, lo que significa que esta no custodia, controla o gestiona los fondos de los usuarios de ninguna manera. Los Servicios se despliegan en un entorno descentralizado en el que los Usuarios pueden acceder a ellos de forma autónoma y directa sin que la Compañía o un tercero intervengan o realicen acción alguna.
 
@@ -130,7 +130,7 @@ Algunas jurisdicciones no permiten la exclusión de ciertas garantías o la limi
 
 Algunos de los programas utilizados en nuestros Servicios pueden ofrecerse bajo una licencia de código abierto que pondremos a su disposición. La documentación del código abierto está disponible en la página [Velero Github](https://github.com/velerofinance) Esta documentación, incluyendo cualquier código que se muestre en ella, está licenciada bajo la [Licencia Pública General Affero de GNU, versión 3 (GNU Affero General Public License, version 3)](https://www.gnu.org/licenses/agpl-3.0.en.html), y usted acepta cumplir con los términos de esta licencia.
 
-El nombre "Oasis", el logotipo de Oasis, otras marcas comerciales relacionadas ("Oasis DeFi", "Oasis DEX"), y los dominios web y las direcciones URL son propiedad de Velero Ecosystem Growth Foundation y "Oasis Pro" es propiedad de Oasis Pro Buyer, LLC y no están amparados por las licencias anteriores. El uso de nuestros Servicios no le da la propiedad de ningún derecho de propiedad intelectual de nuestros Servicios o del contenido al que acceda. No puede utilizar el contenido de propiedad de nuestros Servicios a menos que obtenga el permiso de su propietario o que la ley lo permita de otra manera. Los presentes términos no le otorgan el derecho de utilizar ninguna marca o logo utilizado en nuestros Servicios. No puede eliminar, ocultar o alterar ningún aviso legal que se muestre en o junto con nuestros Servicios.
+El nombre "Velero", el logotipo de Velero, otras marcas comerciales relacionadas ("Velero DeFi", "Velero DEX"), y los dominios web y las direcciones URL son propiedad de Velero Ecosystem Growth Foundation y "Velero Pro" es propiedad de Velero Pro Buyer, LLC y no están amparados por las licencias anteriores. El uso de nuestros Servicios no le da la propiedad de ningún derecho de propiedad intelectual de nuestros Servicios o del contenido al que acceda. No puede utilizar el contenido de propiedad de nuestros Servicios a menos que obtenga el permiso de su propietario o que la ley lo permita de otra manera. Los presentes términos no le otorgan el derecho de utilizar ninguna marca o logo utilizado en nuestros Servicios. No puede eliminar, ocultar o alterar ningún aviso legal que se muestre en o junto con nuestros Servicios.
 
 ## 8. Enlaces
 
