--- a/features/content/tos/pt.mdx
+++ b/features/content/tos/pt.mdx
@@ -12,7 +12,7 @@ Ao clicar ou ativar qualquer botão ou caixa de texto que assinale “aceito” 
 
 ### 1.1. Serviços
 
-A Empresa desenvolveu o Oasis, um ambiente on-line descentralizado e autônomo que exibe informações sobre preços e mecanismos de contrato inteligentes e autônomos de tokens e Ativos Digitais ("Ativos Digitais") e fornece a interface de usuário que orienta o seu acesso ao Oasis (os "Serviços").
+A Empresa desenvolveu o Velero, um ambiente on-line descentralizado e autônomo que exibe informações sobre preços e mecanismos de contrato inteligentes e autônomos de tokens e Ativos Digitais ("Ativos Digitais") e fornece a interface de usuário que orienta o seu acesso ao Velero (os "Serviços").
 
 Você afirma que sabe e reconhece que a Empresa é um fornecedor de serviços de software, o que significa que a Empresa não custodia, controla ou administra os fundos dos usuários de nenhuma forma. Os Serviços são apresentados em um ambiente descentralizado no qual podem ser acessados pelos Usuários de forma autônoma e direta, sem que a Empresa ou terceiros intervenham de nenhuma forma.
 
@@ -130,7 +130,7 @@ Algumas jurisdições não permitem a exclusão de algumas garantias ou a limita
 
 Alguns dos programas utilizados em nossos Serviços podem ser oferecidos sob uma licença de código aberto que colocaremos à sua disposição. A documentação do código de fonte aberta está disponível na página [Velero Github](https://github.com/velerofinance) Essa documentação, incluindo todos os códigos nela incluídos, está licenciada conforme a [Licença Pública Geral Affero de GNU versão 3 (GNU Affero General Public License version 3)](https://www.gnu.org/licenses/agpl-3.0.en.html), e você aceita cumprir os termos dessa licença.
 
-O nome "Oasis", o logotipo do Oasis, outras marcas comerciais relacionadas ("Oasis DeFi", "Oasis DEX"), e os domínios web e os endereços URL são propriedade da Velero Ecosystem Growth Foundation e "Oasis Pro" é propriedade da Oasis Pro Buyer, LLC e não estão amparados pelas licenças anteriores. O uso de nossos Serviços não lhe confere a propriedade de nenhum direito de propriedade intelectual de nossos Serviços ou do conteúdo que você acesse. Você não pode utilizar o conteúdo de nossos Serviços a menos que obtenha a permissão de seu proprietário ou de outra forma seja permitido pela lei. Esses termos não lhe outorgam o direito de usar nenhuma marca ou logotipo usados em nossos Serviços. Você não pode remover, ocultar ou alterar nenhum aviso legal que se exibido em ou junto aos nossos Serviços.
+O nome "Velero", o logotipo do Velero, outras marcas comerciais relacionadas ("Velero DeFi", "Velero DEX"), e os domínios web e os endereços URL são propriedade da Velero Ecosystem Growth Foundation e "Velero Pro" é propriedade da Velero Pro Buyer, LLC e não estão amparados pelas licenças anteriores. O uso de nossos Serviços não lhe confere a propriedade de nenhum direito de propriedade intelectual de nossos Serviços ou do conteúdo que você acesse. Você não pode utilizar o conteúdo de nossos Serviços a menos que obtenha a permissão de seu proprietário ou de outra forma seja permitido pela lei. Esses termos não lhe outorgam o direito de usar nenhuma marca ou logotipo usados em nossos Serviços. Você não pode remover, ocultar ou alterar nenhum aviso legal que se exibido em ou junto aos nossos Serviços.
 
 ## 8. Links
 
