--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -66,7 +66,7 @@
             "success": "Obrigado por entrar em contato. Entraremos em contato em breve."
         },
         "submit": "Enviar",
-        "title": "Contate a Oasis"
+        "title": "Contate a Velero"
     },
     "continue": "Continuar",
     "conversion-fee": "Taxa de conversão",
@@ -180,7 +180,7 @@
             },
             "faq": {
                 "title": "Tem uma pergunta?",
-                "description": "Aprenda mais sobre Oasis, Usdv e DeFi em nossa FAQ"
+                "description": "Aprenda mais sobre Velero, Usdv e DeFi em nossa FAQ"
             }
         }
     },
@@ -264,7 +264,7 @@
     "notification-status-sign": "Assinar Tx",
     "of": "de",
     "one-of-some": "{{one}} de {{some}}",
-    "onramp-leave-message": "Ao clicar em comprar, você sairá da Oasis e será redirecionado para um site de terceiros, onde concluirá o processo de compra.",
+    "onramp-leave-message": "Ao clicar em comprar, você sairá da Velero e será redirecionado para um site de terceiros, onde concluirá o processo de compra.",
     "open-new-vault": "Abrir novo Cofre",
     "open-vault": {
         "title": "Abrir Cofre",
@@ -293,7 +293,7 @@
     "pending-transactions": "Transações Pendentes",
     "permissions": "Conceder permissões",
     "permissions-btn": "Conceder permissões",
-    "permissions-desc": "Isto permitirá a Oasis interagir com o Usdv na sua carteira.",
+    "permissions-desc": "Isto permitirá a Velero interagir com o Usdv na sua carteira.",
     "powered-by": "Distribuído por",
     "proceed": "Continuar",
     "readonly-alert-message": "Você está vendo",
@@ -328,7 +328,7 @@
         },
         "default": {
             "description": "Generate Usdv using crypto as your collateral",
-            "title": "Oasis"
+            "title": "Velero"
         },
         "support": {
             "description": "Todas as respostas para as perguntas mais frequentes.",
@@ -340,7 +340,7 @@
         },
         "about": {
             "title": "Sobre Nós",
-            "description": "A missão do Oasis é disponibilizar a melhor e mais confiável forma de utilizar seu capital."
+            "description": "A missão do Velero é disponibilizar a melhor e mais confiável forma de utilizar seu capital."
         }
     },
     "set-allowance-for": "Configurar Permissão para {{token}}",
@@ -377,7 +377,7 @@
     },
     "token-balance": "Saldo {{token}}",
     "token-depositing": "{{token}} depositando {{amount}}",
-    "tos": "Termos de Serviço da Oasis",
+    "tos": "Termos de Serviço da Velero",
     "tos-accept-message": "Antes de começar, você precisará ler e aceitar nossos termos de serviço.",
     "tos-accept-message-updated": "Antes de continuar, você precisará ler e aceitar nossos termos de serviço atualizados.",
     "tos-acceptance-check-in-progress": "Verificação de aceitação em andamento...",
@@ -511,7 +511,7 @@
     "your-wallet": "Sua carteira",
     "welcome": "Bem-vindo ao novo vaults.velero.finance.",
     "read-blog-post": "Leia nosso artigo no blog",
-    "visit-old-oasis": "Entre no Oasis legado",
+    "visit-old-oasis": "Entre no Velero legado",
     "oracles": {
         "header": "Oráculos",
         "description": "Abaixo podem ser vistos os atuais e próximos preços dos tipos de colaterais aceitos pelos Cofres Velero. A maioria usa o Módulo de Segurança (OSM). Esse módulo atualiza o preço apenas uma vez a cada hora. Assim, se uma quedra bruca estiver acontecendo, os usuários ainda possuem até uma hora para reagir ao novo preço",
@@ -542,7 +542,7 @@
     "dsr-deposit-error-allowance": "Falha ao definir permissões",
     "dsr-deposit-error-deposit": "O depósito para o DSR falhou",
     "dsr-deposit-error-greater-than-balance": "USDV insuficiente",
-    "dsr-deposit-permissions": "Isto permitirá a Oasis interagir com o Usdv na sua carteira.",
+    "dsr-deposit-permissions": "Isto permitirá a Velero interagir com o Usdv na sua carteira.",
     "dsr-product": "Trave seus Usdv com a Velero e receba ganhos.",
     "dsr-proxy-create-description-pending": "Criando proxy",
     "dsr-proxy-create-description-recent": "Proxy Criado",
