--- a/public/locales/cn/common.json
+++ b/public/locales/cn/common.json
@@ -456,7 +456,7 @@
   "your-vaults": "你的金库",
   "no-results": "无结果",
   "learn-about-wallets": "了解钱包",
-  "learn-more-link": "https://ethereum.org/en/wallets/find-wallet/",
+  "learn-more-link": "https://medium.com/@velerodao/a-full-guide-on-how-to-configure-your-metamask-wallet-for-velas-network-4553c477bbf3",
   "enter-an-amount": "输入数量",
   "enter-allowance-amount": "输入许可数量",
   "set-token-allowance": "设置 {{token}} 许可",
