--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -494,7 +494,7 @@
   "your-vaults": "Your Vaults",
   "no-results": "No results",
   "learn-about-wallets": "Learn more about wallets",
-  "learn-more-link": "https://ethereum.org/en/wallets/find-wallet/",
+  "learn-more-link": "https://medium.com/@velerodao/a-full-guide-on-how-to-configure-your-metamask-wallet-for-velas-network-4553c477bbf3",
   "enter-an-amount": "Enter an amount",
   "enter-allowance-amount": "Enter allowance amount",
   "set-token-allowance": "Set {{token}} allowance",
