update link to tutorial for add network

--- a/public/locales/cn/common.json
+++ b/public/locales/cn/common.json
@@ -455,7 +455,7 @@
   "you-are-sending": "你正在发送",
   "your-vaults": "你的金库",
   "no-results": "无结果",
-  "learn-about-wallets": "了解钱包",
+  "learn-about-wallets": "How to connect metamask",
   "learn-more-link": "https://medium.com/@velerodao/a-full-guide-on-how-to-configure-your-metamask-wallet-for-velas-network-4553c477bbf3",
   "enter-an-amount": "输入数量",
   "enter-allowance-amount": "输入许可数量",
