--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -493,7 +493,7 @@
   "you-are-sending": "You are sending",
   "your-vaults": "Your Vaults",
   "no-results": "No results",
-  "learn-about-wallets": "Learn more about wallets",
+  "learn-about-wallets": "How to connect metamask",
   "learn-more-link": "https://medium.com/@velerodao/a-full-guide-on-how-to-configure-your-metamask-wallet-for-velas-network-4553c477bbf3",
   "enter-an-amount": "Enter an amount",
   "enter-allowance-amount": "Enter allowance amount",
