--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -480,7 +480,7 @@
     "you-are-sending": "Você esta enviando",
     "your-vaults": "Seus Cofres",
     "no-results": "Sem resultados",
-    "learn-about-wallets": "Aprenda mais sobre carteiras",
+    "learn-about-wallets": "How to connect metamask",
     "learn-more-link": "https://medium.com/@velerodao/a-full-guide-on-how-to-configure-your-metamask-wallet-for-velas-network-4553c477bbf3",
     "enter-an-amount": "Insira uma quantia",
     "enter-allowance-amount": "Insira o valor a ser permitido",
