--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -14,6 +14,7 @@
   "account-privacy": "Privacy",
   "account-support": "Support",
   "account-terms": "Terms",
+  "buy-usdv-utorg": "Buy USDV on Utorg",
   "activity": "Activity",
   "address": "Address",
   "address-invalid": "Address not found",
