--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -14,6 +14,7 @@
   "account-privacy": "Privacidad",
   "account-support": "Soporte",
   "account-terms": "Términos",
+  "buy-usdv-utorg": "Buy USDV on Utorg",
   "activity": "Actividad",
   "address": "Dirección",
   "address-invalid": "Dirección no encontrada",
