--- a/public/locales/cn/common.json
+++ b/public/locales/cn/common.json
@@ -14,6 +14,7 @@
   "account-privacy": "隐私",
   "account-support": "支持",
   "account-terms": "条款",
+  "buy-usdv-utorg": "Buy USDV on Utorg",
   "activity": "历史记录",
   "address": "地址",
   "address-invalid": "找不到地址",
