--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -14,6 +14,7 @@
     "account-privacy": "Privacidade",
     "account-support": "Suporte",
     "account-terms": "Termos",
+    "buy-usdv-utorg": "Buy USDV on Utorg",
     "activity": "Atividade",
     "address": "Endereço",
     "address-invalid": "Endereço não encontrado",
