add links to footer

--- a/public/locales/cn/common.json
+++ b/public/locales/cn/common.json
@@ -223,7 +223,11 @@
     "contact": "联系方式",
     "faq": "常见问题",
     "privacy": "隐私",
-    "terms": "条款"
+    "terms": "条款",
+    "chat": "Chat",
+    "gov": "Governance",
+    "liquidations": "Liquidations",
+    "site": "Velero"
   },
   "new-to-velas": "刚接触以太坊？",
   "next": "下一步",
