--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -253,6 +253,10 @@
     "contact": "Contact",
     "blog": "Blog",
     "faq": "FAQ",
+    "chat": "Chat",
+    "gov": "Governance",
+    "liquidations": "Liquidations",
+    "site": "Official Site",
     "knowledge-centre": "Knowledge Centre",
     "learn": "Learn",
     "oracles": "Oracles",
