--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -246,7 +246,11 @@
     "knowledge-centre": "Centro de Conocimiento",
     "oracles": "Oráculos",
     "usdv-wallet": "Usdv Wallet",
-    "borrow": "Borrow"
+    "borrow": "Borrow",
+    "chat": "Chat",
+    "gov": "Governance",
+    "liquidations": "Liquidations",
+    "site": "Velero"
   },
   "new-to-velas": "¿Nuevo en Velas? ",
   "next": "Siguiente",
