--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -246,7 +246,11 @@
         "knowledge-centre": "Centro de Conhecimento",
         "oracles": "Oráculos",
         "usdv-wallet": "Usdv Wallet",
-        "borrow": "Empreste"
+        "borrow": "Empreste",
+        "chat": "Chat",
+        "gov": "Governance",
+        "liquidations": "Liquidations",
+        "site": "Velero"
     },
     "new-to-velas": "Novo no Velas? ",
     "next": "Próximo",
